--- a/app/src/main/res/layout/fragment_banner1.xml
+++ b/app/src/main/res/layout/fragment_banner1.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imgBanner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/red"
+        android:background="@drawable/home_image"
         android:contentDescription="@string/app_name"/>
 
     <TextView
@@ -20,7 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_centerInParent="true"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
