--- a/app/src/main/res/layout/fragment_banner3.xml
+++ b/app/src/main/res/layout/fragment_banner3.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="33"
-        android:background="@color/black"/>
+        android:background="@drawable/home_image"/>
 
 </FrameLayout>
