[feat] 게시물 어댑터 연결, 수정

--- a/app/src/main/res/layout/fragment_best_post.xml
+++ b/app/src/main/res/layout/fragment_best_post.xml
@@ -69,7 +69,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="120dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/line"
@@ -88,7 +89,8 @@
             app:borderWidth="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:ignore="HardcodedText"/>
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
