--- a/app/src/main/res/layout/item_grid_post.xml
+++ b/app/src/main/res/layout/item_grid_post.xml
@@ -11,6 +11,7 @@
         android:layout_width="156dp"
         android:layout_height="198dp"
         android:background="@color/gray5"
+        android:elevation="5dp"
         app:cardCornerRadius="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -29,19 +30,21 @@
                 android:adjustViewBounds="true"/>
 
             <TextView
-                android:id="@+id/tv_date"
+                android:id="@+id/tv_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                style="@style/regular12"
-                android:text="게시글 날짜"/>
+                style="@style/medium12"
+                android:textColor="@color/black"
+                android:text="게시자 id"/>
 
 
             <TextView
                 android:id="@+id/tv_post_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/medium12"
+                style="@style/regular12"
+                android:textColor="@color/black"
                 android:text="게시글 제목"/>
 
 
