--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toTopOf="@+id/id_ET" />
 
     <TextView
-        android:id="@+id/id_available"
+        android:id="@+id/idavailable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="사용 가능한 ID입니다."
