--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.view.home.BestPostFragment"
     android:background="@color/white">
-
-
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,19 +21,16 @@
             android:layout_marginTop="25dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_music"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_music"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintStart_toStartOf="@id/iv_back"
-            app:layout_constraintTop_toTopOf="@id/iv_back"
-            />
+            app:layout_constraintTop_toTopOf="@id/iv_back" />
 
         <TextView
             android:id="@+id/tv_music"
@@ -44,11 +39,9 @@
             android:text="Soranji - Mrs.GREEN APPLE"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
+            style="@style/regular12"
             app:layout_constraintStart_toStartOf="@id/iv_music"
             app:layout_constraintTop_toTopOf="@id/iv_back" />
-
-
-
 
         <ImageView
             android:id="@+id/detailImage"
@@ -58,9 +51,7 @@
             android:layout_marginTop="35dp"
             app:layout_constraintTop_toTopOf="@id/tv_music"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -74,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_heart_off"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="20dp" />
 
             <ImageView
                 android:id="@+id/iv_chat"
@@ -82,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_chat"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="20dp" />
 
             <ImageView
                 android:id="@+id/iv_share"
@@ -90,8 +81,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_share"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="20dp"/>
-
+                android:layout_marginTop="20dp" />
 
             <ImageView
                 android:id="@+id/iv_bookmark"
@@ -111,9 +101,7 @@
             style="@style/semibold14"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@id/detailImage"
-            app:layout_constraintTop_toBottomOf="@id/detailImage"/>
-
-
+            app:layout_constraintTop_toBottomOf="@id/detailImage" />
 
         <TextView
             android:id="@+id/detailTitle"
@@ -136,22 +124,81 @@
             android:textColor="@color/black"
             android:layout_marginTop="70dp"
             app:layout_constraintStart_toStartOf="@id/detailImage"
-            app:layout_constraintTop_toBottomOf="@+id/detailTitle"/>
+            app:layout_constraintTop_toBottomOf="@id/detailTitle" />
+
+        <LinearLayout
+            android:id="@+id/layout_style"
+            android:layout_width="340dp"
+            android:layout_height="90dp"
+            android:orientation="horizontal"
+            android:background="@drawable/style_etv_background"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            app:layout_constraintStart_toStartOf="@id/tv_style"
+            app:layout_constraintTop_toBottomOf="@id/tv_style">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <!-- 이미지 -->
+                <FrameLayout
+                    android:layout_width="70dp"
+                    android:layout_height="70dp">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:cardCornerRadius="20dp"
+                        android:background="@drawable/style_etv_background" >
+
+                    <ImageView
+                        android:id="@+id/iv_style_shop"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/post_ex1"
+                        android:background="@drawable/style_rounded_image_mask" />
+                    </androidx.cardview.widget.CardView>
+
+                </FrameLayout>
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="10dp"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="center">
+
+                    <TextView
+                        android:id="@+id/tv_style_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="블리즈"
+                        style="@style/medium12"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:id="@+id/tv_style_subtitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="따뜻하고 귀여운 코디"
+                        style="@style/regular12"
+                        android:textColor="@color/black"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+
+
+            
+        </LinearLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
-
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
