Feat : Calendar 기능 및 핸들러 구현

--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -1,23 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="53dp"
-    android:height="53dp"
-    android:viewportWidth="53"
-    android:viewportHeight="53">
-  <path
-      android:pathData="M0,0h53v53h-53z"
-      android:fillColor="#CDCDCD"/>
-  <path
-      android:pathData="M-877.5,-1901.5h4120v3302h-4120z"
-      android:strokeWidth="5"
-      android:fillColor="#00000000"
-      android:strokeColor="#007151"/>
-  <path
-      android:pathData="M-155,-642h360v800h-360z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M26.5,26.5m-26.5,0a26.5,26.5 0,1 1,53 0a26.5,26.5 0,1 1,-53 0"
-      android:fillColor="#007151"/>
-  <path
-      android:pathData="M37.286,28.714H28.714V37.286C28.714,37.74 28.534,38.176 28.212,38.498C27.891,38.819 27.455,39 27,39C26.545,39 26.109,38.819 25.788,38.498C25.466,38.176 25.286,37.74 25.286,37.286V28.714H16.714C16.26,28.714 15.824,28.534 15.502,28.212C15.181,27.891 15,27.455 15,27C15,26.545 15.181,26.109 15.502,25.788C15.824,25.466 16.26,25.286 16.714,25.286H25.286V16.714C25.286,16.26 25.466,15.824 25.788,15.502C26.109,15.181 26.545,15 27,15C27.455,15 27.891,15.181 28.212,15.502C28.534,15.824 28.714,16.26 28.714,16.714V25.286H37.286C37.74,25.286 38.176,25.466 38.498,25.788C38.819,26.109 39,26.545 39,27C39,27.455 38.819,27.891 38.498,28.212C38.176,28.534 37.74,28.714 37.286,28.714Z"
-      android:fillColor="#ffffff"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="70dp" android:viewportHeight="53" android:viewportWidth="53" android:width="70dp">
+      
+    <path android:fillColor="#007151" android:pathData="M26.5,26.5m-26.5,0a26.5,26.5 0,1 1,53 0a26.5,26.5 0,1 1,-53 0"/>
+      
+    <path android:fillColor="#ffffff" android:pathData="M37.286,28.714H28.714V37.286C28.714,37.74 28.534,38.176 28.212,38.498C27.891,38.819 27.455,39 27,39C26.545,39 26.109,38.819 25.788,38.498C25.466,38.176 25.286,37.74 25.286,37.286V28.714H16.714C16.26,28.714 15.824,28.534 15.502,28.212C15.181,27.891 15,27.455 15,27C15,26.545 15.181,26.109 15.502,25.788C15.824,25.466 16.26,25.286 16.714,25.286H25.286V16.714C25.286,16.26 25.466,15.824 25.788,15.502C26.109,15.181 26.545,15 27,15C27.455,15 27.891,15.181 28.212,15.502C28.534,15.824 28.714,16.26 28.714,16.714V25.286H37.286C37.74,25.286 38.176,25.466 38.498,25.788C38.819,26.109 39,26.545 39,27C39,27.455 38.819,27.891 38.498,28.212C38.176,28.534 37.74,28.714 37.286,28.714Z"/>
+    
 </vector>
