--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -14,4 +14,10 @@
 
 
     </style>
+    <style name="CustomWeekDayText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#00A879</item>
+        <item name="android:letterSpacing">0.05</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
