--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,50 +1,46 @@
-<LinearLayout
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context=".presentation.view.calendar.ScheduleFragment">
 
     <!-- 상단 헤더 -->
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="@color/green_main">
 
+        <!-- 뒤로가기 버튼 -->
         <ImageView
-            android:id="@+id/btnBack"
+            android:id="@+id/backButton"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_back_white"
-            android:layout_alignParentStart="true"/>
+            android:layout_marginStart="16dp"
+            android:layout_centerVertical="true"
+            android:contentDescription="뒤로가기" />
 
+        <!-- 일정 텍스트 -->
         <TextView
-            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="일정"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
             android:layout_centerInParent="true"/>
 
+        <!-- 체크 아이콘 -->
         <ImageView
-            android:id="@+id/btnCheck"
+            android:id="@+id/checkButton"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_check"
-            android:layout_alignParentEnd="true"/>
-    </RelativeLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="16dp"
+            android:contentDescription="확인" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- 선택한 날짜 표시 -->
-    <TextView
-        android:id="@+id/tvSelectedDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_gravity="center"/>
-
-    <!-- MaterialCalendarView -->
-    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
