--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -37,8 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Post"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
+                    style="@style/bold24"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -84,15 +83,14 @@
             <!-- 카테고리 -->
             <TextView
                 android:id="@+id/tvCategory"
+                style="@style/bold16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Category"
-                android:textSize="16sp"
-                android:textStyle="bold"
                 android:textColor="@color/black"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:id="@+id/categoryButtonContainer"
@@ -154,8 +152,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="지역"
-                android:textSize="16sp"
-                android:textStyle="bold"
+                style="@style/bold16"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@id/categoryButtonContainer"
@@ -214,8 +211,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="해시태그"
-                android:textSize="16sp"
-                android:textStyle="bold"
+                style="@style/bold16"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@id/categoryButtonContainer"
@@ -263,8 +259,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="노래"
-                android:textSize="16sp"
-                android:textStyle="bold"
+                style="@style/bold16"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -300,8 +295,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="옷 정보"
-                android:textSize="16sp"
-                android:textStyle="bold"
+                style="@style/bold16"
                 android:textColor="@color/black"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/etInfo"
