--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -35,7 +34,7 @@
                     android:background="@android:color/transparent"
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp"
-                    android:textSize="16sp"
+                    style="@style/medium16"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -67,8 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="인기 검색어"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                style="@style/bold20"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="16dp"
