style : font style 수정

--- a/app/src/main/res/layout/activity_sign_up_success.xml
+++ b/app/src/main/res/layout/activity_sign_up_success.xml
@@ -22,10 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/pretendard_semibold"
         android:text="가입 완료!"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        style="@style/semibold18"
         app:layout_constraintEnd_toEndOf="@+id/travel_IV"
         app:layout_constraintStart_toStartOf="@+id/travel_IV"
         app:layout_constraintTop_toBottomOf="@+id/travel_IV" />
@@ -34,12 +33,11 @@
         android:id="@+id/ment_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/pretendard_medium"
         android:text="이제, 나만의\n여행 상자를 열어볼까요?"
         android:textColor="@color/black"
         android:layout_marginTop="54dp"
-        android:textSize="20sp"
         android:textAlignment="center"
+        style="@style/semibold18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_success_TV" />
@@ -49,11 +47,10 @@
         android:layout_width="352dp"
         android:layout_height="68dp"
         android:background="@drawable/btn_radius_4"
-        android:fontFamily="@font/pretendard_regular"
         android:text="로그인"
         android:textColor="@color/white"
-        android:textSize="22sp"
         android:layout_marginBottom="19dp"
+        style="@style/semibold20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
