--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -24,10 +24,9 @@
         android:layout_width="352dp"
         android:layout_height="68dp"
         android:background="@drawable/btn_radius_4"
-        android:fontFamily="@font/pretendard_regular"
         android:text="로그인"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        style="@style/semibold20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +47,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="계정이 없으신가요?"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            style="@style/regular14"/>
 
         <TextView
             android:id="@+id/go_resister_TV"
@@ -56,7 +56,8 @@
             android:layout_height="wrap_content"
             android:text="@string/signup_text"
             android:textColor="@color/white"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginStart="5dp"
+            style="@style/regular14"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
