--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -11,7 +11,7 @@
         android:id="@+id/back_btn_IV"
         android:layout_width="15dp"
         android:layout_height="30dp"
-        android:src="@drawable/ic_back_button"
+        android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="30dp"
@@ -22,9 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="회원가입"
-        android:textSize="23sp"
         android:textColor="@color/black"
-        android:fontFamily="@font/pretendard_semibold"
+        style="@style/semibold18"
         app:layout_constraintBottom_toBottomOf="@+id/back_btn_IV"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,10 +34,9 @@
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="54.5dp"
-        android:fontFamily="@font/pretendard_semibold"
         android:text="나만의 TravelBox를\n만들어 보세요!"
-        android:textSize="25sp"
         android:textColor="@color/black"
+        style="@style/semibold18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back_btn_IV"></TextView>
@@ -48,11 +46,11 @@
         android:layout_width="330dp"
         android:layout_height="50dp"
         android:layout_marginTop="35dp"
-        android:fontFamily="@font/pretendard_regular"
         android:hint="닉네임"
         android:textColor="@color/gray3"
         android:inputType="text"
         android:paddingTop="1dp"
+        style="@style/regular12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_TV" />
@@ -62,11 +60,11 @@
         android:layout_width="330dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/pretendard_regular"
         android:hint="ID"
         android:textColor="@color/gray3"
         android:inputType="text"
         android:paddingTop="1dp"
+        style="@style/regular12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name_ET" />
@@ -80,6 +78,7 @@
         android:textColor="@color/green_main"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="5dp"
+        style="@style/regular12"
         app:layout_constraintBottom_toBottomOf="@+id/id_ET"
         app:layout_constraintEnd_toEndOf="@+id/id_ET"
         app:layout_constraintTop_toTopOf="@+id/id_ET" />
@@ -90,8 +89,8 @@
         android:layout_height="wrap_content"
         android:text="사용 가능한 ID입니다."
         android:textColor="@color/green_main"
-        android:textSize="12sp"
         android:visibility="gone"
+        style="@style/regular12"
         app:layout_constraintStart_toStartOf="@+id/id_ET"
         app:layout_constraintTop_toBottomOf="@+id/id_ET" />
 
@@ -101,7 +100,7 @@
         android:layout_height="wrap_content"
         android:text="중복되는 ID입니다."
         android:textColor="@color/red"
-        android:textSize="12sp"
+        style="@style/regular12"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/id_ET"
         app:layout_constraintTop_toBottomOf="@+id/id_ET" />
@@ -111,11 +110,11 @@
         android:layout_width="330dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/pretendard_regular"
         android:hint="비밀번호"
         android:textColor="@color/gray3"
         android:inputType="textPassword"
         android:paddingTop="1dp"
+        style="@style/regular12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/id_ET" />
@@ -125,11 +124,11 @@
         android:layout_width="330dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/pretendard_regular"
         android:hint="비밀번호 확인"
         android:textColor="@color/gray3"
         android:inputType="textPassword"
         android:paddingTop="1dp"
+        style="@style/regular12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pwd_ET" />
@@ -189,7 +188,7 @@
         android:layout_height="wrap_content"
         android:text="비밀번호가 일치하지 않습니다."
         android:textColor="@color/red"
-        android:textSize="12sp"
+        style="@style/regular12"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/pwd_check_ET"
         app:layout_constraintTop_toBottomOf="@+id/pwd_check_ET" />
@@ -199,10 +198,9 @@
         android:layout_width="352dp"
         android:layout_height="68dp"
         android:background="@drawable/btn_radius_4"
-        android:fontFamily="@font/pretendard_regular"
         android:text="완료"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        style="@style/semibold20"
         android:layout_marginBottom="19dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
