--- a/app/src/main/res/values/styles_font.xml
+++ b/app/src/main/res/values/styles_font.xml
@@ -32,6 +32,14 @@
 
     </style>
 
+    <style name="semibold20">
+        <item name="android:fontFamily">@font/pretendard_semibold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:lineSpacingExtra">0sp</item>
+
+    </style>
+
     <style name="semibold18">
         <item name="android:fontFamily">@font/pretendard_semibold</item>
         <item name="android:textSize">18sp</item>
